# ChangeLog for mail-client/mozilla-thunderbird-bin
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird-bin/ChangeLog,v 1.118 2008/11/20 19:20:26 armin76 Exp $

*mozilla-thunderbird-bin-2.0.0.18 (20 Nov 2008)

  20 Nov 2008; Raúl Porcel <armin76@gentoo.org>
  +mozilla-thunderbird-bin-2.0.0.18.ebuild:
  Version bump

*mozilla-thunderbird-bin-3.0_alpha3 (24 Oct 2008)

  24 Oct 2008; Raúl Porcel <armin76@gentoo.org>
  +mozilla-thunderbird-bin-3.0_alpha3.ebuild:
  Version bump

  28 Sep 2008; Markus Meier <maekke@gentoo.org>
  mozilla-thunderbird-bin-2.0.0.17.ebuild:
  amd64 stable, bug #238535

  27 Sep 2008; Raúl Porcel <armin76@gentoo.org>
  mozilla-thunderbird-bin-2.0.0.17.ebuild:
  x86 stable wrt #238535

*mozilla-thunderbird-bin-2.0.0.17 (26 Sep 2008)

  26 Sep 2008; Raúl Porcel <armin76@gentoo.org>
  +mozilla-thunderbird-bin-2.0.0.17.ebuild:
  Version bump

*mozilla-thunderbird-bin-3.0_alpha2 (15 Aug 2008)

  15 Aug 2008; Raúl Porcel <armin76@gentoo.org>
  +mozilla-thunderbird-bin-3.0_alpha2.ebuild:
  Version bump

  04 Aug 2008; Tobias Heinlein <keytoaster@gentoo.org>
  mozilla-thunderbird-bin-2.0.0.16.ebuild:
  amd64 stable wrt security bug #231975

  24 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  mozilla-thunderbird-bin-2.0.0.16.ebuild:
  x86 stable wrt security #231975

*mozilla-thunderbird-bin-2.0.0.16 (24 Jul 2008)

  24 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  +mozilla-thunderbird-bin-2.0.0.16.ebuild:
  Version bump

*mozilla-thunderbird-bin-3.0_alpha1 (21 May 2008)

  21 May 2008; Raúl Porcel <armin76@gentoo.org>
  +mozilla-thunderbird-bin-3.0_alpha1.ebuild:
  Version bump

  06 May 2008; Raúl Porcel <armin76@gentoo.org>
  mozilla-thunderbird-bin-2.0.0.14.ebuild:
  Add uk to linguas

  04 May 2008; Markus Meier <maekke@gentoo.org>
  mozilla-thunderbird-bin-2.0.0.14.ebuild:
  amd64/x86 stable, security bug #214816

*mozilla-thunderbird-bin-2.0.0.14 (02 May 2008)
