@@ -1,6 +1,10 @@
 # ChangeLog for mail-client/mozilla-thunderbird
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/ChangeLog,v 1.274 2008/11/20 19:48:24 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/ChangeLog,v 1.275 2008/11/22 14:02:13 maekke Exp $
+
+  22 Nov 2008; Markus Meier <maekke@gentoo.org>
+  mozilla-thunderbird-2.0.0.18.ebuild:
+  amd64/x86 stable, bug #246602
 
 *mozilla-thunderbird-2.0.0.18 (20 Nov 2008)
 
